# robotsearch

./: example.py  pyproject.toml  requirements.txt  setup.py
robotsearch/: rct_svm.py
robotsearch/ml/: classifier.py
robotsearch/robots/: rct_robot.py
