[tool.poetry]
name = "robotsearch"
version = "0.1.0"
description = "Modified version of https://github.com/ijmarshall/robotsearch using poetry"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
h5py = "^3.5.0"
numpy = "^1.21.2"
keras = "^2.6.0"
scikit-learn = "^1.0"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
